syntax = "proto3";

package bisq.core.network.p2p.proto;

message RequestType {
    string value = 1;
}

message ConnectionRequest {
    string fromAddress = 1;
}

message Peer {
    string address = 1;
}

message PeerList {
    repeated Peer peers = 1;
}